...
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:scrollbars="vertical"
            android:id="@+id/fragment_home_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

        <trieu.propertyguru.base.view.InfoView
...
