...
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/information_layout_tv_error"
            android:layout_gravity="center" />

    </LinearLayout>

</merge>
